Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122256

Crash on QQuickMultiEffectPrivate::updateBlurItemsAmount() with nullptr access

XMLWordPrintable

    • Windows
    • 936e977f0 (dev), e3a7145f6 (6.7), 6f61dad6f (6.6), 486376f82 (tqtc/lts-6.5)

      Unfortunately have no reproducer or any details how this may be reproduced on purpose.
      I just see such crashes on users side in our crash reporting system.

      Unhandled exception thrown: read access violation.
      **this** was nullptr.
      

      Call stack:

      >	Qt6Qml.dll!QQmlEngine::baseUrl() Line 889	C++
       	Qt6Qml.dll!QQmlComponentPrivate::loadUrl(const QUrl & newUrl, QQmlComponent::CompilationMode mode) Line 777	C++
       	[Inline Frame] Qt6Qml.dll!QQmlComponent::{ctor}(QQmlEngine *) Line 610	C++
       	Qt6Qml.dll!QQmlComponent::QQmlComponent(QQmlEngine * engine, const QUrl & url, QObject * parent) Line 594	C++
       	Qt6QuickEffects.dll!QQuickMultiEffectPrivate::updateBlurItemsAmount(int blurLevel) Line 1675	C++
       	Qt6QuickEffects.dll!QQuickMultiEffectPrivate::updateBlurLevel(bool forceUpdate) Line 1653	C++
       	Qt6QuickEffects.dll!QQuickMultiEffectPrivate::initialize() Line 1447	C++
       	[Inline Frame] Qt6QuickEffects.dll!QQuickMultiEffectPrivate::handleGeometryChange(const QRectF &) Line 870	C++
       	Qt6QuickEffects.dll!QQuickMultiEffect::geometryChange(const QRectF & newGeometry, const QRectF & oldGeometry) Line 846	C++
       	Qt6Quick.dll!QQuickItem::setSize(const QSizeF & size) Line 7560	C++
       	Qt6Quick.dll!QQuickItemLayer::updateGeometry() Line 9753	C++
       	[Inline Frame] Qt6Quick.dll!QQuickItem::geometryChange::__l2::<lambda_a2b1b025688d05673091f135a48d921d>::operator()(const QQuickItemPrivate::ChangeListener &) Line 3825	C++
       	[Inline Frame] Qt6Quick.dll!QQuickItemPrivate::notifyChangeListeners(QFlags<enum QQuickItemPrivate::ChangeType>) Line 357	C++
       	Qt6Quick.dll!QQuickItem::geometryChange(const QRectF & newGeometry, const QRectF & oldGeometry) Line 3823	C++
       	Qt6Quick.dll!QQuickItem::setSize(const QSizeF & size) Line 7560	C++
       	[Inline Frame] Qt6Quick.dll!QQuickAnchorsPrivate::setItemSize(const QSizeF &) Line 399	C++
       	Qt6Quick.dll!QQuickAnchorsPrivate::fillChanged() Line 175	C++
       	[Inline Frame] Qt6Quick.dll!QQuickItem::geometryChange::__l2::<lambda_a2b1b025688d05673091f135a48d921d>::operator()(const QQuickItemPrivate::ChangeListener &) Line 3825	C++
       	[Inline Frame] Qt6Quick.dll!QQuickItemPrivate::notifyChangeListeners(QFlags<enum QQuickItemPrivate::ChangeType>) Line 357	C++
       	Qt6Quick.dll!QQuickItem::geometryChange(const QRectF & newGeometry, const QRectF & oldGeometry) Line 3823	C++
       	Qt6Quick.dll!QQuickItem::setSize(const QSizeF & size) Line 7560	C++
       	Qt6Quick.dll!QQuickWindow::resizeEvent(QResizeEvent * ev) Line 186	C++
      ...
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kagro Kaj Grönholm
            studiosus Vladimir Belyavsky
            Votes:
            5 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes