MultiEffect: Avoid crashing without QQmlEngine

Task-number: QTBUG-122256
Pick-to: 6.5
Change-Id: I116658ce3d454e72e854bd5cf4d31dd736cca10d
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit 936e977f0046549c8faab1ae4227bc44366090bd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit e3a7145f65cc51a5ffdf4d78f738a74d4216f968)